# sdl-sopwith

./: .git-blame-ignore-revs  .gitignore  .gitmodules  .lvimrc  404.html  40years.html  AUTHORS  COPYING  ChangeLog  FAQ  FAQ.md  Gemfile  INSTALL  Makefile  Makefile.am  NEWS  NEWS.md  README  README.md  TODO  _config.yml  _inta.asm  _intc.c  acconfig.h  autogen.sh  bmblib.c  bmblib.h  cgavideo.c  cgavideo.h  configure.ac  configure.in  def.h  docs.md  download.shtml  embuild.sh  features.md  features.shtml  font.h  footer  free-ibmpc.md  (+85 more)
.github/workflows/: build.yml  c-cpp.yml  emscripten.yml
_layouts/: default.html
amj/: sopwith2.c
assets/css/: style.css
attic/: README  _dkio.asm  _intc.c  _ints.asm  bmblib.c  bmblib.h  createheader.pl  respons2.rsp  sopasm.asm  sw.mak  swnetio.c  swplanes.c  swplanes.h  swutil.asm  vid_amig.c
attic/amj/: README  def.h
doc/: GNUmakefile  INSTALL  Makefile.am  dlcvsamj.txt  keys.txt  medals.txt  origdoc.txt  sopwith-mission.5  sopwith.6  sopwith.6.html  sopwith.cfg.5  sopwith.cfg.5.html
maps/: README.md  bogey.sop  empty.sop  new_targets.sop  original.sop  tank_strike.py  tank_strike.sop  terrain.py  triplane.sop
msvc/: README  config.h  sopwith.vcproj
original-files/: sopwith-orig-gpl.diff  sopwith1_docs.txt  sopwith2_docs.txt
pkg/: Makefile.am  config.make.in
pkg/emscripten/: GNUmakefile  sopwith.html
pkg/macos/: .gitignore  GNUmakefile  Info.plist.in  cp-with-libs  dmgfix
pkg/macos/disk/problems.rtfd/: TXT.rtf
pkg/win32/: .gitignore  GNUmakefile  cp-with-libs
src/: .iwyu-overrides.imp  Makefile.am  Makefile.in.old  cgavideo.h  font.h  gamepad.h  io.github.fragglet.sdl_sopwith.metainfo.xml  pcsound.h  resource.rc.in  sopwith.desktop  std.h  sw.h  swasynio.c  swasynio.h  swauto.c  swauto.h  swcollsn.c  swcollsn.h  swconf.c  swconf.h  swdisp.c  swdisp.h  swend.c  swend.h  swgames.c  swgames.h  swground.c  swground.h  swgrpha.c  swgrpha.h  swinit.c  swinit.h  swmach.h  swmain.c  swmain.h  swmisc.c  swmisc.h  swmove.c  swmove.h  swnetio.c  (+26 more)
src/dos/: Makefile  README  pcsound.c  timer.c
src/gtk/: Makefile.am  README  cgavideo.c  main.c  pcsound.c  timer.c  video.c
src/psion/: Makefile.am  README  main.c  pcsound.c  timer.c  vid_4bit.c  video.c
src/sdl/: Makefile.am  cgavideo.c  gamepad.c  main.c  pcsound.c  swconf.c  swinit.c  tcpcomm.c  timer.c  video.c
web/: sopwith.html  sopwith.js  sopwith.wasm
