AC_INIT(src/swmain.c)
AC_CONFIG_AUX_DIR(autotools)

VERSION=1.3.0
AC_SUBST(VERSION)

AC_CANONICAL_SYSTEM

dnl optimisations

AC_CANONICAL_HOST
AC_CANONICAL_TARGET

case "$target" in
	i486-*-*)
	    if test x$ac_cv_prog_gcc = xyes; then
		CFLAGS="$CFLAGS -march=486"
	    fi
	    ;;
	i?86-*-*)
	    if test x$ac_cv_prog_gcc = xyes; then
		CFLAGS="$CFLAGS -march=pentium -mcpu=pentiumpro"
	    fi
	    ;;
	*-*-osf*)
	    if test x$ac_cv_prog_gcc != xyes; then
		CFLAGS="-g3 -fast -arch host"
	    fi
	    ;;
esac

dnl Figure out which networking libraries to use
case "$target" in
    *-*-cygwin* | *-*-mingw32*)
	LDFLAGS="$LDFLAGS -lwsock32"
	;;
    sparc*-*-solaris*)
	LDFLAGS="$LDFLAGS -lsocket -lnsl"
	;;
    *-*-qnx*)
	LDFLAGS="$LDFLAGS -lsocket"
	;;
esac

AM_INIT_AUTOMAKE(sopwith,$VERSION)

AM_CONFIG_HEADER(config.h:config.hin)

dnl check for cc

AC_PROG_CC
AC_PROG_RANLIB

dnl install programs

AC_PROG_INSTALL

dnl libraries

AM_PATH_SDL(1.1.3, [
	SOPWITH_BINS="$SOPWITH_BINS sopwith"
	SOPWITH_SUBDIRS="$SOPWITH_SUBDIRS sdl"
],)

AM_PATH_GTK(1.2.10, [
	SOPWITH_BINS="$SOPWITH_BINS gtksopwith"
	SOPWITH_SUBDIRS="$SOPWITH_SUBDIRS gtk"
],)

AC_SUBST(SOPWITH_BINS)
AC_SUBST(SOPWITH_SUBDIRS)

dnl check for TCPIP support

AC_CHECK_HEADER(netinet/ip.h, AC_DEFINE(TCPIP),,)

dnl generate Makefiles

AC_OUTPUT([
Makefile
src/Makefile
src/gtk/Makefile
src/sdl/Makefile
])

