EXTRA_DIST = \
./config.make.in               \
./macos/cp-with-libs           \
./macos/disk                   \
./macos/disk/background.png    \
./macos/disk/dir.DS_Store      \
./macos/dmgfix                 \
./macos/GNUmakefile            \
./macos/Info.plist.in          \
./macos/PkgInfo                \
./win32/cp-with-libs           \
./win32/GNUmakefile

