EXTRA_DIST = \
./config.make.in                         \
./emscripten/GNUmakefile                 \
./emscripten/error.png                   \
./emscripten/loading.gif                 \
./emscripten/sopwith.html                \
./macos/cp-with-libs                     \
./macos/disk                             \
./macos/disk/background.png              \
./macos/disk/dir.DS_Store                \
./macos/disk/problems.rtfd/problems1.png \
./macos/disk/problems.rtfd/problems2.png \
./macos/disk/problems.rtfd/problems3.png \
./macos/disk/problems.rtfd/TXT.rtf       \
./macos/dmgfix                           \
./macos/GNUmakefile                      \
./macos/Info.plist.in                    \
./macos/PkgInfo                          \
./win32/cp-with-libs                     \
./win32/GNUmakefile

